--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>NgReduxApplication</title>
@@ -8,7 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <ngr-root>Loading...</ngr-root>
+  <script src="https://cdn.auth0.com/js/lock/10.14/lock.min.js"></script>
 </body>
+
 </html>
