beterrrrr loading again

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style type="text/css">
     .pre-loader {
-      width: 100px;
-      margin: 50px auto;
+      text-align: center;
+      font-weight: 500;
+      line-height: 32px;
+      font-size: 24px;
+      margin: 100px 0px 50px;
       font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     }
   </style>
@@ -20,7 +23,7 @@
 <body>
   <ngr-root>
     <div class="pre-loader">
-      Loading...
+      Loading Application...
     </div>
   </ngr-root>
   <script src="https://cdn.auth0.com/js/lock/10.14/lock.min.js"></script>
